Added feature that return what new products have been added
Added logs

Minor bugfix